Fix cloud style, spacing and alignment

--- a/src/app/todo-clouds/todo-clouds.component.css
+++ b/src/app/todo-clouds/todo-clouds.component.css
@@ -3,15 +3,15 @@
 * {
   font-family: Margarine;
 }
-
+/* Scrollable screen */
 .scroll-container {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
   position: absolute;
-  scroll-behavior: smooth;
   }
 
+/* Wallpaper which moves vertically */
 .background-image {
   position: absolute;
   width: 100%;
@@ -23,27 +23,32 @@
   z-index: -1;
 }
 
+/* ----- Main grid layout ----- */
 .grid-container {
   position: absolute;
   height: 5000px;
-  border: 3px solid green;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  justify-content: center;
-  align-items: center;
+  justify-content: end;
   width: auto;
   overflow: scroll;
+  align-items: end;
 }
 
+.grid-spacing {
+  width: 100%;
+  height: 6rem;
+}
 
 .grid-column {
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
-  border: 4px solid yellow;
   height: auto;
-  padding: 50px;
+  padding: 2rem 5rem;
+  align-self: self-end;
 }
+
 
 /* ----- CLOUD & TASKS ----- */
 .cloud {
@@ -55,6 +60,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 1rem;
 }
 
 .cloud-task {
@@ -82,6 +88,35 @@
 
 }
 
-/*
-TODO: .btn-remove {}
-*/
+.btn-remove {
+  position: relative;
+  cursor: pointer;
+  font-size: 25px;
+  top: 0.9rem;
+  transition: 0.1s ease-in-out;
+}
+
+.btn-remove:hover {
+  font-size: 30px;
+}
+
+/* Hiding the scrollbars across the page */
+.scroll-container,.grid-container {
+  overflow: -moz-scrollbars-none;
+  -ms-overflow-style: none;
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+  scroll-behavior: smooth;
+}
+
+.scroll-container::-webkit-scrollbar,
+.grid-container::-webkit-scrollbar {
+  width: 0 !important;
+}
+
+.scroll-container::-webkit-scrollbar-thumb,
+.grid-container::-webkit-scrollbar-thumb,
+.scroll-container::-webkit-scrollbar-track,
+.grid-container::-webkit-scrollbar-track {
+  background-color: transparent;
+}
